fixed shifts of skills and prices, added scroll to the top

--- a/src/widgets/Activity/Activity.module.scss
+++ b/src/widgets/Activity/Activity.module.scss
@@ -21,8 +21,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 37px 20px;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 
   @media screen and (max-width: $tablet) {
     gap: 20px;
@@ -37,32 +36,37 @@
 }
 
 .activity {
-  max-width: 466px;
-  width: 100%;
+  width: 45%;
+  height: 100%;
 
-  @media screen and (max-width: $tablet) {
-    max-width: 340px;
+  @media screen and ((max-width: $tablet) or (min-width: $desktop-xl)) {
+    width: 80%;
   }
 }
 
 .article {
-  height: 293px;
   position: relative;
-
-  @media screen and (max-width: $tablet) {
-    height: 214px;
-  }
 }
 
 .tag {
   position: absolute;
-  bottom: -15px;
+  bottom: -3%;
   left: 50%;
   transform: translate(-50%, 0);
   font-weight: 500;
-  font-size: 17px;
-  line-height: 23px;
+  font-size: 2vw;
+  line-height: 2vw;
   color: #000000;
+
+  @media screen and (max-width: $tablet) {
+    font-size: 3vh;
+    line-height: 3vh;
+  }
+  
+  @media screen and (min-width: $desktop-m) {
+    font-size: 24px;
+    line-height: 28px;
+  }
 
   &:hover {
     color: #000000;
@@ -72,6 +76,7 @@
 .img {
   width: 100%;
   height: 100%;
+  object-fit:contain;
 }
 
 .title {
