--- a/src/widgets/Layout/components/Logo/Logo.module.scss
+++ b/src/widgets/Layout/components/Logo/Logo.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   gap: 12px;
+  cursor: pointer;
 
   @media screen and (max-width: $tablet) {
     gap: 8px;
